--- a/styles/index.scss
+++ b/styles/index.scss
@@ -38,7 +38,14 @@
 
 .editbar
 {
-    margin-top:60px;
+    margin-top:260px;
+    
+    width:50%;
+}
+
+.edit-item{
+    margin-left: 50px;
+
 }
 
 
@@ -52,25 +59,6 @@
 }
 
 
-
-@media only screen and (max-width: 768px) {
-[class*="col-"] {
-    width: 100%;
-}
-}
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
 
 
 .qtyTextbox
@@ -92,7 +80,93 @@
 {
     margin-top: 20px;
 }
-.infoBar
+
+
+// img{
+//     width:100%;
+//     height: auto;
+// }
+
+.product-image
 {
-    display: block;
+    width:20%;
+    margin: 0;
+    float: left;
+      height: auto;
+
 }
+
+.product-name{
+       width:30%;
+    margin-left: 50px;
+    float: left;
+      height: auto;
+}
+
+.product-size
+{
+       width:15%;
+    margin: 0;
+    float: left;
+      height: auto;
+}
+.product-quantity
+{
+       width:15%;
+    margin: 0;
+    float: left;
+      height: auto;
+}
+.product-price
+{
+       width:15%;
+    margin: 0;
+    float: left;
+    height: auto;
+}
+
+
+@media screen and (max-width: 768px) {
+
+.product-image
+{
+    width:50%;
+    margin: 0;
+    float: left;
+      height: auto;
+
+}
+
+.product-name{
+       width:50%;
+    margin: 0;
+    float: left;
+      height: auto;
+}
+
+.product-size
+{display: none;
+}
+.product-quantity
+{
+       display: none;
+}
+.product-price
+{
+       display: none;
+}
+    .info-bar{
+        display: none;
+    }
+    .editbar{
+        width: 100%;
+        float: left;
+        height: auto;
+        margin: 60px;
+    }
+    .edit-item{
+        margin-left: 0;
+    }
+
+}
+
